<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nire_Kontua">


    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/loginBanner"
        android:layout_width="411sp"
        android:layout_height="125sp"
        android:background="@color/verdePastel"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Banner logo -->

        <Button
            android:id="@+id/IdBtnMenuZabaldu"
            android:layout_width="61sp"
            android:layout_height="53sp"
            android:layout_gravity="center"
            android:foreground="@drawable/menu" />

        <ImageView
            android:id="@+id/loginBannerLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menLogoDeskripzioa"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo_oma" />

    </LinearLayout>

   <!-- CONTENT -->

    <!-- TextView "Izena:" -->
    <TextView
        android:id="@+id/nrkntTxtIzena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/regIzena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBanner" />

    <!-- Izena EditText -->
    <EditText
        android:id="@+id/nrkntEditIzena"
        android:layout_width="150sp"
        android:layout_height="48sp"
        android:layout_marginStart="30sp"
        android:hint="@string/nrkntEditIzena"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtIzena" />

    <!-- TextView "NAN" -->
    <TextView
        android:id="@+id/nrkntTxtNan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="144dp"
        android:text="@string/regNan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBanner" />

    <!-- NAN EditText -->
    <EditText
        android:id="@+id/nrkntEditNan"
        android:layout_width="150sp"
        android:layout_height="48sp"
        android:layout_marginEnd="28dp"
        android:hint="@string/nrkntEditNan"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nrkntTxtAbizenak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtNan"
        app:layout_constraintVertical_bias="0.0" />

    <!-- TextView "Abizenak" -->
    <TextView
        android:id="@+id/nrkntTxtAbizenak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"
        android:text="@string/regAbizena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntEditIzena" />

    <!-- Abizenak EditText -->
    <EditText
        android:id="@+id/nrkntEditAbizenak"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/nrkntEditAbizenak"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtAbizenak" />

    <!-- TextView "e-posta" -->
    <TextView
        android:id="@+id/nrkntTxtPosta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"
        android:text="@string/regEposta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntEditAbizenak" />

    <!-- e-posta EditText -->
    <EditText
        android:id="@+id/nrkntEditPosta"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/nrkntEditPosta"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtPosta" />

    <!-- TextView "Mugikor Zenbakia:" -->
    <TextView
        android:id="@+id/nrkntTxtMugikorra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"
        android:text="@string/regMugikorra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntEditPosta" />

    <!-- Mugikorra EditText -->
    <EditText
        android:id="@+id/nrkntEditMugikorra"
        android:layout_width="0sp"
        android:layout_height="48sp"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/nrkntEditMugikorra"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtMugikorra" />

    <!-- TextView "Pasahitza:" -->
    <TextView
        android:id="@+id/nrkntTxtPasahitza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="10sp"
        android:text="@string/regPasw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntEditMugikorra" />

    <!-- Pasahitza EditText (textPassword) -->
    <EditText
        android:id="@+id/nrkntEditPasahitza"
        android:layout_width="150sp"
        android:layout_height="48sp"
        android:layout_marginStart="30sp"
        android:hint="@string/nrkntEditPasahitza"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtPasahitza" />

    <!-- TextView "Errepikatu pasahitza:" -->
    <TextView
        android:id="@+id/nrkntTxtPasahitza2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="48sp"
        android:text="@string/regPasw2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntEditMugikorra" />

    <!-- Errepikatu pasahitza EditText (textPassword) -->
    <EditText
        android:id="@+id/nrkntEditPasahitza2"
        android:layout_width="150sp"
        android:layout_height="48sp"
        android:layout_marginEnd="30sp"
        android:hint="@string/nrkntEditPasahitza"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nrkntTxtPasahitza" />


    <!-- INSIDE HEADER -->
    <LinearLayout
        android:id="@+id/idLayOpzioak"
        android:layout_width="265sp"
        android:layout_height="match_parent"
        android:background="@color/verdePastel"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- ITXI -->
        <Button
            android:id="@+id/idBtnMenuItxi"
            android:layout_width="61sp"
            android:layout_height="53sp"
            android:layout_marginStart="3sp"
            android:layout_marginTop="36sp"
            android:backgroundTint="#00FFFFFF"
            android:foreground="@android:drawable/ic_menu_close_clear_cancel" />

        <!-- nire kontua(Nire_Kontua) -->
        <Button
            android:id="@+id/idBtnMenuKontua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/menKontua"
            android:textAlignment="viewStart"
            android:textAllCaps="true" />

        <!-- erreserbak(Egindako_Erreserbak) -->
        <Button
            android:id="@+id/idBtnMenuErreserbak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/menErreserbak"
            android:textAlignment="viewStart"
            android:textAllCaps="true" />

    </LinearLayout>
  <!-- header fin -->


</androidx.constraintlayout.widget.ConstraintLayout>